# microservice-breakdown

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: chat.txt
env/: pyvenv.cfg
graphql/: README.md  main.py  pyproject.toml
graphql/src/: config.py
graphql/src/repo/: note.py
graphql/src/service/: note.py
output/: summary.txt
src/: analyzer.py  parser.py  summarizer.py
tests/: analyzer_test.py  parser_test.py  summarizer_test.py
